--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-pageflip": "^2.0.3",
+    "react-router-dom": "^7.5.0",
     "styled-components": "^6.1.17"
   },
   "devDependencies": {
